--- a/lab1.html
+++ b/lab1.html
@@ -57,6 +57,7 @@
             </div>
         </div>
     </div>
-    <script src="js/lab1.js">
+    <!-- added a closing script tag -->
+    <script src="js/lab1.js"></script> 
 </body>
 </html>
